--- a/Test/public/components/css/style.css
+++ b/Test/public/components/css/style.css
@@ -1,8 +1,11 @@
-.main-footer {
-    background: #fff;
-    padding: 15px;
-    color: #444;
-    border-top: 1px solid #d2d6de;
-	margin-left: 0;
-	margin-top: 20px;	
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+main{
+    flex-grow: 1;
+    width: 90%;
 }
